--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="sql experament" content="a simple way to learn sql injection fast">
     <meta name="google-site-verification" content="g0L7jzYSQvylUB1k37cnX_mddHK7R1tU4Cxwxtn3Wek" />
     <meta charset="utf-8" />
     <title>SQL Injection</title>
